# code-comedian

./: README.md  pyproject.toml
src/code_comedian/: jokes.py  prompt.json  prompt_with_safety.json  settings.py
src/code_comedian/api/: main.py
src/code_comedian/prompts/: prompt_wo_safety.json
src/joke_judge_ai/: jokes.py  settings.py
src/joke_judge_ai/api/: main.py
